# datasets

./: README.md  pyproject.toml
src/nora_datasets/: __init__.py  uploader.py
src/nora_datasets/examples/: example.py
src/nora_datasets/repository/iris/: metadata.toml
